--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ /* TinyMce 텍스트편집기 css  */
+ .panel-body img{
+    max-width : 100%;
+    max-height : 100%;
+}
